--- a/ch6_q_learning_frozen_lake.ipynb
+++ b/ch6_q_learning_frozen_lake.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gym\n",
     "import collections\n",
-    "from tensorboardX import SummaryWriter"
+    "from tensorboardX import SummaryWriter\n",
+    "from IPython.display import clear_output\n",
+    "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,32 +59,48 @@
     "        old_val = self.values[(s, a)]\n",
     "        self.values[(s, a)] = (1 - ALPHA) * old_val  + ALPHA * new_val\n",
     "        \n",
-    "    def play_episode(self, env):\n",
+    "    def play_episode(self, env, frames=None):\n",
     "        total_reward = 0.0\n",
     "        state = env.reset()\n",
     "        while True:\n",
     "            _, action = self.best_value_and_action(state)\n",
     "            new_state, reward, is_done, _ = env.step(action)\n",
     "            total_reward += reward\n",
+    "            state = new_state\n",
+    "            if frames is not None:\n",
+    "                frames.append({\n",
+    "                    'frame': env.render(mode='ansi'),\n",
+    "                    'state': state,\n",
+    "                    'action': action,\n",
+    "                    'reward': reward\n",
+    "                })\n",
     "            if is_done:\n",
     "                break\n",
-    "            state = new_state\n",
+    "\n",
     "        return total_reward"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best reward updated 0.000 -> 0.050\n",
-      "Best reward updated 0.050 -> 0.100\n",
-      "Best reward updated 0.100 -> 0.150\n",
-      "Best reward updated 0.150 -> 0.300\n"
+      "Best reward updated 0.000 -> 0.150\n",
+      "Best reward updated 0.150 -> 0.250\n",
+      "Best reward updated 0.250 -> 0.300\n",
+      "Best reward updated 0.300 -> 0.400\n",
+      "Best reward updated 0.400 -> 0.450\n",
+      "Best reward updated 0.450 -> 0.550\n",
+      "Best reward updated 0.550 -> 0.600\n",
+      "Best reward updated 0.600 -> 0.650\n",
+      "Best reward updated 0.650 -> 0.750\n",
+      "Best reward updated 0.750 -> 0.800\n",
+      "Best reward updated 0.800 -> 0.850\n",
+      "Solved in 13767 iterations!\n"
      ]
     }
    ],
@@ -114,6 +132,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_frames(frames):\n",
+    "    for i, frame in enumerate(frames):\n",
+    "        clear_output(wait=True)\n",
+    "        print(frame['frame'])\n",
+    "        print(\"Timestep: {}\".format(i + 1))\n",
+    "        print(\"State: {}\".format(frame['state']))\n",
+    "        print(\"Action: {}\".format(frame['action']))\n",
+    "        print(\"Reward: {}\".format(frame['reward']))\n",
+    "        sleep(.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (Right)\n",
+      "SFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFF\u001b[41mG\u001b[0m\n",
+      "\n",
+      "Timestep: 20\n",
+      "State: 15\n",
+      "Action: 2\n",
+      "Reward: 1.0\n",
+      "Solved! Total Reward: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_env.reset()\n",
+    "frames = []\n",
+    "total_reward = 0\n",
+    "while total_reward < 1:\n",
+    "    frames = []\n",
+    "    total_reward = agent.play_episode(test_env, frames)\n",
+    "\n",
+    "while True:\n",
+    "    print_frames(frames)\n",
+    "    print(\"Solved! Total Reward: %d\" % total_reward)\n",
+    "    sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -125,18 +197,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
   }
  },
  "nbformat": 4,
